# PulseBot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.proton  Dockerfile.timeplus  LICENSE  Makefile  README.md  config.yaml.example  docker-compose.yaml  init-proton.sh  pyproject.toml
deploy/: QUICKSTART_LOCAL.md
deploy/proton/: docker-compose.yaml
deploy/timeplus/: docker-compose.yaml
docker/: config.yaml  entrypoint-proton.sh  entrypoint-timeplus.sh  start-all-in-one.sh
docs/: TechnicalDesign.md  TelegramSetup.md  configuration.md  design.md  hooks.md  memory.md  multi-agent.md  skills.md  stream-metadata-lifecycle.md  tasks.md  telegram.md  web_search.md  workspace.md
docs/codereview/: guide.md
docs/plans/: 2026-02-27-llm-thinking-feedback-design.md  2026-02-27-llm-thinking-feedback.md  2026-03-03-openclaw-skill-compatibility.md  2026-03-06-repetitive-cron-tasks.md  2026-03-13-tool-call-hooks.md  2026-03-16-multi-agent-support.md  2026-03-25-event-driven-projects.md
docs/specs/: 2026-03-24-scheduled-multi-agent-projects-design.md  2026-03-25-event-driven-projects-design.md
pulsebot/: __init__.py  _version.py  cli.py  config.py  factory.py
pulsebot/agents/: __init__.py  event_watcher.py  manager_agent.py  models.py  project_manager.py  sub_agent.py
pulsebot/api/: __init__.py  server.py
pulsebot/channels/: __init__.py  base.py  telegram.py
pulsebot/core/: __init__.py  agent.py  context.py  executor.py  notifier.py  prompts.py  router.py
pulsebot/db/: __init__.py  models.py  postgres.py
pulsebot/embeddings/: __init__.py  base.py  local.py  ollama.py  openai.py
pulsebot/hooks/: __init__.py  base.py  factory.py  passthrough.py  policy.py  webhook.py
pulsebot/providers/: __init__.py  anthropic.py  base.py  gemini.py  nvidia.py  ollama.py  openai.py
pulsebot/skills/: __init__.py  base.py  clawhub_client.py  loader.py  lock.py  stream_registry.py
pulsebot/skills/agentskills/: __init__.py  loader.py  models.py  requirements.py
pulsebot/skills/builtin/: __init__.py  agentskills_bridge.py  file_ops.py  project_manager.py  scheduler.py  shell.py  skill_manager.py  web_search.py  workspace.py
pulsebot/timeplus/: __init__.py  client.py  event_writer.py  memory.py  proton_proxy.py  setup.py  streams.py  tasks.py
pulsebot/utils/: __init__.py  helpers.py  logging.py
pulsebot/web/: index.html
pulsebot/workspace/: __init__.py  config.py  manager.py  proxy_registry.py  proxy_router.py  registration_router.py  registry_client.py  server.py
pulsebot_ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
pulsebot_ui/src/: App.jsx  index.css  utils.js
pulsebot_ui/src/components/: Card.jsx  DataTable.jsx  Layout.jsx  MetricCard.jsx  PageHeader.jsx
pulsebot_ui/src/context/: ChatContext.jsx
pulsebot_ui/src/hooks/: useProtonQuery.js
pulsebot_ui/src/pages/: Agents.jsx  Chat.jsx  Dashboard.jsx  Events.jsx  LLMLogs.jsx  Memory.jsx  Settings.jsx  Tasks.jsx  ToolLogs.jsx
searxng/: settings.yml
skills/timeplus-app-builder/: SKILL.md
skills/timeplus-app-builder/references/: PROTON_DRIVER.md  VISTRAL_API.md
skills/timeplus-app-builder/scripts/: scaffold-timeplus-app.sh
skills/timeplus-sql-guide/: SKILL.md
skills/timeplus-sql-guide/references/: INGESTION.md  RANDOM_STREAMS.md  UDFS.md  (+1 more)
tests/: test_agentskills.py  test_clawhub_client.py  test_event_integration.py  test_event_writer.py  test_factory_integration.py  test_hooks.py  test_lock.py  test_manager_agent.py  test_multi_agent_models.py  test_multi_agent_setup.py  test_notifier.py  test_observability_config.py  test_project_manager.py  test_project_manager_skill.py  test_requirements.py  test_scheduler_skill.py  test_setup.py  test_skill_loader_extensions.py  test_sub_agent.py  test_task_trigger_endpoint.py  test_tasks.py  test_telegram_task_broadcast.py
tests/agents/: test_event_driven_models.py  test_event_watcher.py  test_manager_agent_event.py  test_project_manager_event.py
tests/skills/: test_project_manager_skill_event.py
(+2 files in other folders)
