[project]
name = "pulsebot"
dynamic = ["version"]
description = "A lightweight, stream-native AI agent powered by Timeplus"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Timeplus Engineering", email = "engineering@timeplus.com"}
]
keywords = ["ai", "agent", "streaming", "timeplus", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Timeplus
    "proton-driver>=0.2.13",
    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    # Channels
    "python-telegram-bot>=21.0",
    "aiohttp>=3.10.0",
    # Configuration & CLI
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    # Utilities
    "httpx>=0.27.0",
    # Timezone data for zoneinfo (needed on systems without system tzdata, e.g. Alpine)
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
pulsebot = "pulsebot.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pulsebot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pulsebot"]
# pulsebot/web/ is gitignored (generated by `npm run build` in pulsebot_ui/)
# but must be bundled in the wheel so the API server can serve the web UI.
artifacts = ["pulsebot/web/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
